--- a/index.html
+++ b/index.html
@@ -1,68 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Test2 by khwansakun</title>
-  </head>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  </head>
   <body>
-    <a id="forkme_banner" href="https://github.com/khwansakun/test2">View on GitHub</a>
-    <div class="shell">
 
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Test2</h1>
-            <h2>test 2</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1>Test2</h1>
+        <p>test 2</p>
       </header>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/khwansakun/test2/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/khwansakun/test2/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
+      <div id="banner">
+        <span id="logo"></span>
+
+        <a href="https://github.com/khwansakun/test2" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/khwansakun/test2/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/khwansakun/test2/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <h1>
+<a id="hello" class="anchor" href="#hello" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello</h1>
+
+<p><img src="https://scontent-a-hkg.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10292138_489984931137325_5613752246512011892_n.jpg?oh=710f9bc52bbc4e53621773edd882af2b&amp;oe=5554A3F6" alt=""></p>
+
+<h2>
+<a id="my-name-is-khwansakun--chaichana" class="anchor" href="#my-name-is-khwansakun--chaichana" aria-hidden="true"><span class="octicon octicon-link"></span></a>My name is khwansakun  Chaichana</h2>
+
+<h2>
+<a id="im-20-years-old" class="anchor" href="#im-20-years-old" aria-hidden="true"><span class="octicon octicon-link"></span></a>I'm 20 years old.</h2>
+
+<h2>
+<a id="i-live-in-thailand-at-hatyai" class="anchor" href="#i-live-in-thailand-at-hatyai" aria-hidden="true"><span class="octicon octicon-link"></span></a>I live in thailand, at hatyai.</h2>
+
+<p><img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/1544553_575663402569477_5102809806977733414_n.jpg?oh=8febb861f0e87fa2445a4d5d28388c42&amp;oe=556037CD&amp;__gda__=1433212428_f24b8c2e8bd152012f9afb1fa374dde7" alt=""></p>
+
+<h1>
+<a id="love-me-love-my-dog-" class="anchor" href="#love-me-love-my-dog-" aria-hidden="true"><span class="octicon octicon-link"></span></a>LOVE ME LOVE MY DOG :')</h1>
       </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <p>Hello my name is khwansakun and I'm 20 years old. I live in thailand, at hatyai, i love dog and i like pizza</p>
-      </section>
-
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/khwansakun">khwansakun</a> can be found on <a href="https://github.com/khwansakun/test2">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p>Project maintained by <a href="https://github.com/khwansakun">khwansakun</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
-
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
