Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </nav>
       <section>
         <h1>
-<a id="hello" class="anchor" href="#hello" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello</h1>
+<a id="hello-" class="anchor" href="#hello-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello... !</h1>
 
 <p><img src="https://scontent-a-hkg.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10292138_489984931137325_5613752246512011892_n.jpg?oh=710f9bc52bbc4e53621773edd882af2b&amp;oe=5554A3F6" alt=""></p>
 
@@ -51,7 +51,10 @@
 <a id="im-20-years-old" class="anchor" href="#im-20-years-old" aria-hidden="true"><span class="octicon octicon-link"></span></a>I'm 20 years old.</h2>
 
 <h2>
-<a id="i-live-in-thailand-at-hatyai" class="anchor" href="#i-live-in-thailand-at-hatyai" aria-hidden="true"><span class="octicon octicon-link"></span></a>I live in thailand, at hatyai.</h2>
+<a id="birth-date--1-july-1994" class="anchor" href="#birth-date--1-july-1994" aria-hidden="true"><span class="octicon octicon-link"></span></a>Birth Date : 1 July 1994</h2>
+
+<h2>
+<a id="i-live-in-thailand-at-hatyai" class="anchor" href="#i-live-in-thailand-at-hatyai" aria-hidden="true"><span class="octicon octicon-link"></span></a>I live in Thailand, at Hatyai.</h2>
 
 <p><img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/1544553_575663402569477_5102809806977733414_n.jpg?oh=8febb861f0e87fa2445a4d5d28388c42&amp;oe=556037CD&amp;__gda__=1433212428_f24b8c2e8bd152012f9afb1fa374dde7" alt=""></p>
 
